<resources>
    <string name="app_name">Vehicle Manager</string>
    <string name="str_VIN">VIN</string>
    <string name="str_YEAR">Year</string>
    <string name="str_MAKE">Make</string>
    <string name="str_MODEL">Model</string>
    <string name="str_DESC">Description</string>
    <string name="str_btn_add">Add Vehicle</string>
    <string name="str_btn_add_maintenance">Add Maintenance Record</string>
    <string name="str_btn_cancel">Cancel</string>
    <string name="str_type">Type</string>
    <string name="str_mileage">Mileage</string>
    <string name="str_date_tip">Click to select date</string>
    <string name="str_notes">Notes</string>
    <string name="str_main_tap_tip">Tap on vin or notes to view maintenance records.</string>
    <string name="str_back">Back</string>
    <string name="str_jan">Jan</string>
    <string name="str_feb">Feb</string>
    <string name="str_mar">Mar</string>
    <string name="str_apr">Apr</string>
    <string name="str_may">May</string>
    <string name="str_jun">Jun</string>
    <string name="str_jul">Jul</string>
    <string name="str_aug">Aug</string>
    <string name="str_sep">Sep</string>
    <string name="str_oct">Oct</string>
    <string name="str_nov">Nov</string>
    <string name="str_dec">Dec</string>
    <string-array name="str_type_list">
        <item>Oil Change</item>
        <item>Tire Rotation</item>
        <item>New Battery</item>
        <item>Timing Belt</item>
        <item>Serpentine Belt</item>
        <item>Transmission Fluid/Filter</item>
        <item>Coolant Exchange</item>
        <item>Brake Fluid Exchange</item>
        <item>Brake Pads</item>
        <item>Brake Rotors</item>
        <item>New Tires</item>
        <item>Spark Plugs</item>
        <item>Plug Wires</item>
        <item>New Coil(s)</item>
        <item>New Wiper Blades</item>
        <item>Engine Air Filter</item>
        <item>Cabin Air Filter</item>
        <item>Ball Joints</item>
        <item>Shocks/Struts</item>
        <item>Other</item>
    </string-array>
    <string name="low_storage_error">Unable to start barcode scanner, low storage...</string>
    <string name="no_camera_permission">Unable to start scanner, no camera permissions given.</string>
    <string name="str_no_barcode_error">Unable to read barcode.</string>
    <string name="str_scan_tip">Click to scan vin.</string>

    <string name="ok">ok</string>
</resources>
